<resources>
    <string name="app_name">MyHealt</string>
    <string name="action_settings">Impostazioni</string>
    <string name="action_today">Oggi</string>
    <string name="action_thisweek">Ultima Settimana</string>
    <string name="action_thismonth">Ultimo Mese</string>
    <string name="action_thisyear">Ultimo Anno</string>
    <string name="action_settingaccount">Account</string>
    <string name="action_settingsnotifier">Notifiche</string>
    <string name="action_diary">Diario</string>
    <string name="mail">MyHealt@gmail.com</string>
    <string name="action_calendar">Calendario</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="istruction">Puoi scansionare il codice a barre sulla confezione del farmaco con la fotocamera del dispositivo</string>
    <string name="scannertext">Scanneraizza un medicinale</string>
    <string name="ricerca_manuale">Ricerca manuale</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
</resources>
